# pte

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
architecture/: pte.drawio  pte.sketch.drawio
pte/: command_buffer.py  cursor.py  document.py  document_buffer.py  document_buffer_manager.py  highlight.py  run.py  state.py  state_machine.py  text_buffer.py  text_buffer_manager.py  view.py
pte/modes/: __init__.py  command_mode.py  insert_mode.py  mode.py  mode_machine.py  normal_mode.py  transition.py
pte/syntax_highlighting/: __init__.py  python_highlighter.py
pte/view/: __init__.py  colors.py  command_line_view.py  document_view.py  main_view.py  text_buffer_view.py
scripts/: check.sh  format.sh  install.sh  run.sh
src/pte/: colors.py  document.py  document_buffer.py  document_buffer_manager.py  highlight.py  run.py
src/pte/documents/: __init__.py  cursor.py  document.py  document_buffer.py  document_buffer_manager.py
src/pte/modes/: __init__.py  command_mode.py  insert_mode.py  mode.py  mode_machine.py  normal_mode.py  transition.py
src/pte/syntax_highlighting/: __init__.py  pygments_highlighter.py  python_highlighter.py  regex_highlighter.py  syntax_highlighter.py
src/pte/view/: __init__.py  document_view.py  main_view.py  status_line_view.py
