[project]
name = "pte"
version = "0.2.0"
description = "A modal command-line text editor written in Python"
authors = [{name = "Jakob Knauer"}]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100

[tool.isort]
force_sort_within_sections = true
lines_after_imports = 2
